--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin-Recipes</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <h1>Tasty Recipes</h1>
+   <div class="nav">
+       <nav>
+           <ul>
+               <li>Home</li>
+               <li>Recipes</li>
+               <li>Learn</li>
+               <li>About</li>
+           </ul>
+       </nav>
+   </div>
+   <header>
+       <img src="/images/pexels-roman-odintsov-4551832.jpg" alt="welcome image" height="500px">
+       <h1><span>&#128521</span> Welcome To My Recipe</h1>
+   </header>
+   <div class="card">
+       <section>
+           <img src="images/pexels-brett-jordan-825661.jpg" alt="pizza" height="330px" width="428px">
+       </section>
+       <section>
+        <img src="images/beef.jpg" alt="beef" height="330px">
+       </section>
+       <section>
+        <img src="images/pexels-valeria-boltneva-1307658.jpg" alt="steak" height="330px" width="428px">
+       </section>
+   </div>
 </body>
 </html>
