finished the recipe project last commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <div class="nav">
        <nav>
            <ul>
-               <li>Home</li>
+               <li><a href="/index.html"> Home</a></li>
                <li>Recipes</li>
                <li>Learn</li>
                <li>About</li>
@@ -20,17 +20,37 @@
    </div>
    <header>
        <img src="/images/pexels-roman-odintsov-4551832.jpg" alt="welcome image" height="500px">
+       <div class="welcome">
        <h1><span>&#128521</span> Welcome To My Recipe</h1>
+       <!-- <br>
+       <br>  -->
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit qui quibusdam ratione aspernatur deleniti debitis mollitia cumque quos nesciunt natus placeat, architecto voluptas ullam reprehenderit veritatis. Perspiciatis eaque rem eveniet.</p>
+       <span>&rarr;</span>
+    </div>
    </header>
    <div class="card">
        <section>
+        <a href="/recipes/beef.html" target="_parent" rel="noopener noreferrer">
            <img src="images/pexels-brett-jordan-825661.jpg" alt="pizza" height="330px" width="428px">
+        </a>
+           <p>Just like yo' Irish mama used to make, and the brisket will melt in your mouth. Get a center cut of meat, not  'point.' Super-tender and slices really nicely, just like butter. What little was leftover was made into a great hash the following morning.</p>
+           <a href="/recipes/beef.html" target="_parent" rel="noopener noreferrer">
+           <button>Read More <span>&rarr;</span></button>
+            </a>
        </section>
        <section>
+        <a href="/recipes/beef.html" target="_parent" rel="noopener noreferrer">
         <img src="images/beef.jpg" alt="beef" height="330px">
+        </a>
+        <p>Just like yo' Irish mama used to make, and the brisket will melt in your mouth. Get a center cut of meat, not the 'point.' Super-tender and slices really nicely, just like butter. What little was leftover was made into a great hash the following morning.</p>
+        <button>Read More <span>&rarr;</span></button>
        </section>
        <section>
+        <a href="/recipes/beef.html" target="_parent" rel="noopener noreferrer">
         <img src="images/pexels-valeria-boltneva-1307658.jpg" alt="steak" height="330px" width="428px">
+        </a>
+        <p>Just like yo' Irish mama used to make, and the brisket will melt in your mouth. Get a center cut of meat, not the 'point.' Super-tender and slices really nicely, just like butter. What little was leftover was made into a great hash the following morning.</p>
+        <button>Read More <span>&rarr;</span></button>
        </section>
    </div>
 </body>
