--- a/recipes/beef.html
+++ b/recipes/beef.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="../styles/beef.css">
 </head>
 <body>
+    <div class="nav">
+        <nav>
+            <ul>
+                <li class="list"><a href="/index.html">Home</a></li>
+                <li class="list">Recipes</li>
+                <li class="list">Learn</li>
+                <li class="list">About</li>
+            </ul>
+        </nav>
+    </div>
     <h1>Slow Cooker Corned Beef and Cabbage</h1>
     <p>Just like yo' Irish mama used to make, and the brisket will melt in your mouth. Get a center cut of meat, not the 'point.' Super-tender and slices really nicely, just like butter. What little was leftover was made into a great hash the following morning.</p>
     <div class="header">
