edited the cards in the index.html

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <a href="/recipes/beef.html" target="_parent" rel="noopener noreferrer">
         <img src="images/beef.jpg" alt="beef" height="330px">
         </a>
-        <p>Just like yo' Irish mama used to make, and the brisket will melt in your mouth. Get a center cut of meat, not the 'point.' Super-tender and slices really nicely, just like butter. What little was leftover was made into a great hash the following morning.</p>
+        <p>My Grandmother 'Nanaw' Rowan made the most delicious meatloaf in the state. When she passed away, she didn't leave me her recipe, but she left me the desire to recreate it. I think this is it, in flavor and texture. Don't let the number of ingredients discourage you. It's part of the magic in creating a masterpiece!</p>
         <button>Read More <span>&rarr;</span></button>
        </section>
        <section>
         <a href="/recipes/beef.html" target="_parent" rel="noopener noreferrer">
         <img src="images/pexels-valeria-boltneva-1307658.jpg" alt="steak" height="330px" width="428px">
         </a>
-        <p>Just like yo' Irish mama used to make, and the brisket will melt in your mouth. Get a center cut of meat, not the 'point.' Super-tender and slices really nicely, just like butter. What little was leftover was made into a great hash the following morning.</p>
+        <p>If you're not using a high-protein pasta, you can double the protein per serving by adding 8 ounces cooked and sliced chicken breast. Double the sauce in Step 1 to keep the dish creamy.</p>
         <button>Read More <span>&rarr;</span></button>
        </section>
    </div>
